--- a/app/views/comments/winery_photo_comment_detail.html.erb
+++ b/app/views/comments/winery_photo_comment_detail.html.erb
@@ -29,7 +29,7 @@
             <div class="share float_r">
               <%= render "share/sns_icons_second",
                 :image_url => sns_image_url(@photo, :thumb_name => :large),
-                :title => sns_title(@winery.name),
+                :title => sns_title(@winery),
                 :summary => "的图片",
                 :url => request.url %>
               </div>
