--- a/app/views/wineries/_winery_detail.html.erb
+++ b/app/views/wineries/_winery_detail.html.erb
@@ -124,8 +124,8 @@
      <div class="share">
        <%= render "share/sns_icons",
                   :image_url => sns_image_url(@winery, :thumb_name => :middle_x),
-                  :title => sns_title(@winery.name),
-                  :summary => winery_summary(@winery),
+                  :title => sns_title(@winery),
+                  :summary => sns_summary(@winery),
                   :url => request.url %>
        <div class="clear"></div>
      </div> 
