top drop down style

--- a/public/template/event.html
+++ b/public/template/event.html
@@ -40,11 +40,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <li class="arrow">
             	<a href="wine.html">酒款</a>
             	<ul class="CategoryDropdown city" style="z-index:1;">
-                	<li>上海</li>
-                    <li>成都</li>
-                    <li>北京</li>
-                    <li>深圳</li>
-                    <li>广州</li>
+                	<li><a href="#">上海</a></li>
+                    <li><a href="#">成都</a></li>
+                    <li><a href="#">北京</a></li>
+                    <li><a href="#">深圳</a></li>
+                    <li><a href="#">广州</a></li>
                 </ul>
             </li>
           <div class="clear"></div>
