活动搜索、我的主页活动内容

--- a/public/template/myevent.html
+++ b/public/template/myevent.html
@@ -72,13 +72,42 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
           </div>
           <div class="content">
           	<div class="left">
-           	  <div class="tabs">
+           	  <div class="tabs clearfix">
                   <ul>
                     <li><a href="event_create.html">创建的活动</a></li>
                     <li><a href="event_join.html">参加的活动</a></li>
                     <li><a href="event_follow.html">感兴趣的活动</a></li>
                   </ul>
                 </div>
+              <div class="title_btn">
+                  <h1>创建</h1>
+                </div>
+                <div class="event_list">
+        	<dl class="clearfix">
+            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
+                <dd>
+               	  <span class="type"><a href="#">品酒会</a></span>
+                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
+                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
+                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
+                    组织者：Sheren</div>
+                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
+                </dd>
+                <div class="clear"></div>
+            </dl>
+            <dl class="clearfix">
+            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
+                <dd>
+               	  <span class="type"><a href="#">品酒会</a></span>
+                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
+                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
+                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
+                    组织者：Sheren</div>
+                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
+                </dd>
+                <div class="clear"></div>
+            </dl>
+        </div>
               <div class="title_btn">
                   <h1>参加</h1>
                 </div>
