index share css update

--- a/public/template/stylesheets/home.css
+++ b/public/template/stylesheets/home.css
@@ -36,7 +36,7 @@ a.hs em {background-position:27px -182px;}
 a.hc:hover em {background-position:0 2px;}
 a.hf:hover  em {background-position:0 -28px;}
 a.hs:hover  em {background-position:27px -164px;}
-.dropbox {position:absolute;left:10px;top:40px;background-color:#fff;border:1px solid #ccc;padding:3px 5px 5px 5px;}
+.dropbox {position:absolute;left:0;top:30px;background-color:#fff;border:1px solid #ccc;padding:3px 5px 5px 5px;}
 .dropbox .com_s {padding-top:3px;width:45px;text-align:center;}
-.dropbox .com_s a {display:block;margin:0 0 5px 0;position:relative;}
+.dropbox .com_s a {display:block;margin:0 0 5px 0;position:relative;float:none;}
 .dropbox .com_s .sns_on {position:absolute;left:8px;top:8px;}
