--- a/app/assets/stylesheets/add.css
+++ b/app/assets/stylesheets/add.css
@@ -6,7 +6,7 @@
 .addwine .step .step_fir {background-position:0 -130px;}
 .addwine .step .step_sec {background-position:0 -170px;}
 .addwine .step .step_thr {background-position:0 -210px;}
-.box  {background:url(bg/bg_box_m.gif) repeat-y ;margin: 0 0 20px 0;}
+.box  {background:url(bg/bg_box_m.gif) repeat-y;margin: 0 0 20px 0;}
 .box_t {width:680px;height:10px;background:url(bg/bg_box_t.gif) no-repeat left top;}
 .box_b {width:680px;height:25px;background:url(bg/bg_box_b.gif) no-repeat left top;}
 .box_main {padding:15px 30px 0 30px;}
@@ -26,7 +26,7 @@
 .box_ew .wine_info {float:left;width:560px;}
 .box_ew .year span a {margin:0 5px 0 0;text-decoration:none;display:inline-block;color:#6699cc;}
 .box_ew .year span a:hover {background-color:#6699cc;color:#fff;}
-.wine_select {background-color:#f3f3f3;padding:20px;}
+.wine_select {background-color:#f3f3f3;padding:20px;margin:0 0 30px 0;}
 .wine_select dl {width:310px;height:75px;float:left;margin:0 10px 20px 0;position:relative;}
 .wine_select dt {width:70px;float:left;margin-right:15px;}
 .wine_select dd {width:220px;float:left;}
