--- a/app/assets/stylesheets/hp.css
+++ b/app/assets/stylesheets/hp.css
@@ -133,3 +133,19 @@ li.photo_des p {margin: 0 0 5px 0;}
 #cellar .wine_list .wine_info h2 {font-size:14px;}
 td.img div {position:relative;}
 .non_public {position:absolute;top:40px;left:40px;}
+
+.side_event dl {margin:0 0 20px 0;}
+.side_event dt {width:70px;float:left;float:left;margin-right:15px;}
+.side_event dd {width:135px;float:left;}
+.side_event dd h3 {font-size:12px;margin-bottom:10px;}
+.side_event dd .info {margin:0 0 5px 0;}
+.p_count2 {color:#999;}
+
+/*----------------event---------------*/
+.event_member_list {margin:0 0 30px 0;}
+.event_member_list table {border-top:1px solid #ddd;}
+.event_member_list td, .event_member_list th {padding:10px 0;border-bottom:1px dotted #ccc;}
+.event_member_list td.img {width:80px;}
+.event_member_list td.name {width:80px;}
+.event_member_list td.email {width:180px;}
+.event_member_list td.tel {width:120px;}
