--- a/app/views/wineries/_timeline.html.erb
+++ b/app/views/wineries/_timeline.html.erb
@@ -5,54 +5,12 @@
         <div class="iw_img">
             <%= link_to wine_waterfall_image_tag(l.secondary_actor, :thumb_name => :middle), winery_path(l.secondary_actor) %>
         </div>
-        <!-- 酒庄被评论 -->
-        <% if l.event_type == "new_comment" %>
-            <div class="iw_info">
-                <h1><%= raw link_to l.secondary_actor.name_zh, winery_path(l.secondary_actor) %></h1>
-                <h2><%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %></h2>
-                <p class="iw_action">有了新评论</p>
-            </div>
-            <div class="iw_main">
-                <ul>
-                    <% l.secondary_actor.comments.recent(6).each do |comment|%>
-                        <%= render :partial => "share/short_comment", :locals => {:comment => comment} %>
-                    <% end %>
-                </ul>
-            </div>
-            <div class="iw_more iw_more_comment">
-                <%= link_to  winery_comments_path(l.secondary_actor) do %>
-                    共<%= l.secondary_actor.comments_count %>条评论
-                <% end %>
-            </div>
-        <!-- 酒庄被关注 -->
-        <% elsif l.event_type == 'new_follow' %>
-            <div class="iw_info">
-                <h1><%= raw link_to l.secondary_actor.name_zh, winery_path(l.secondary_actor) %></h1>
-                <h2><%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %></h2>
-                <p class="iw_action">这个酒庄被关注</p>
-            </div>
-            <div class="iw_main">
-                <ul>
-                    <% l.secondary_actor.follows.recent(6).each do |follow|%>
-                        <li>
-                            <div class="left">
-                                <%= link_to_user follow.user, user_path(follow.user, :trailing_slash => true), 
-                                    {:with_avatar => true, :avatar_version => :thumb}, {:width => 30, :height => 30} %>
-                            </div>
-                            <div class="right">
-                                <p class="username"><%= link_to_user follow.user, user_path(follow.user, :trailing_slash => true) %></p>
-                            </div>
-                            <div class="clear"></div>
-                        </li>
-                    <% end %>
-                </ul>
-            </div>
-            <div class="iw_more iw_more_follow"> 
-                <%= link_to  followers_list_winery_path(l.secondary_actor) do %>
-                    共<%= l.secondary_actor.followers_count %>个关注
-                <% end %>
-            </div>
-        <% end %>
+        <div class="iw_info">
+            <h1><%= raw link_to l.secondary_actor.name_zh, winery_path(l.secondary_actor) %></h1>
+            <h2><%= raw link_to l.secondary_actor.origin_name, winery_path(l.secondary_actor) %></h2>
+            <p class="iw_action"><%= time_line_text(l.event_type, true) %></p>
+        </div>
+        <%= render :partial => "share/time_line_wine", :locals => {:l => l} %>
         <% if current_user %>
             <div class="iw_comment clearfix" style="display:none;">
                 <div class="left">
