index comment update

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -170,7 +170,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </div>
             <div class="iw_comment clearfix">
             	<div class="left"><a href="#"><img src="images/test/user_30_2.jpg" width="30" height="30" alt="username" /></a></div>
-                <div class="right"><input name="" type="text" /><a class="btn_gray" href="#"><span>添加评论</span></a></div>
+                <div class="right"><textarea class="text" name="" cols="" rows="" placeholder=""></textarea><a class="btn_gray" href="#"><span>添加评论</span></a></div>
             </div>
       </div>
       <div class="iw">
@@ -214,7 +214,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="iw_more"><a href="#">去看看他的酒窖</a></div>
             <div class="iw_comment clearfix">
             	<div class="left"><a href="#"><img src="images/test/user_30_2.jpg" width="30" height="30" alt="username" /></a></div>
-                <div class="right"><input name="" type="text" /><a class="btn_gray" href="#"><span>添加评论</span></a></div>
+                <div class="right"><textarea class="text" name="" cols="" rows="" placeholder=""></textarea><a class="btn_gray" href="#"><span>添加评论</span></a></div>
             </div>
       </div>
       <div class="iw">
