--- a/public/template/event_photo_upload.html
+++ b/public/template/event_photo_upload.html
@@ -64,7 +64,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         <div class="left">
                 <div class="section">
                 	<div class="title">
-                    	<a href="winery_profile.html" class="btn_gray float_r"><span>返回</span></a>
+                    	<a href="event_detail.html" class="btn_gray float_r"><span>返回</span></a>
            	      <h2>上传图片 </h2></div>
                     <div class="content">
                     <p class="mb10"><a href="#" class="btn_blue_b mr5"><span>选择图片</span></a></p>
