--- a/public/template/add_event.html
+++ b/public/template/add_event.html
@@ -114,6 +114,10 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
        	    <img src="images/common/add_event_step3.gif" alt="上传活动海报" width="180" height="22" />
         </div>
         <div class="mb30 align_c"><a href="add_event_poster.html" class=" btn_gray_b"><span>上传活动海报</span></a></div>
+        <div class="add_event_step">
+       	    <img src="images/common/add_event_step4.gif" alt="上传活动海报" width="180" height="22" />
+        </div>
+        <div class="mb30 align_c"><a href="add_event_poster.html" class=" btn_gray_b"><span>上传活动照片</span></a></div>
         <div class="btn_submit"><a href="event_detail.html" class="btn_bluesky_s mr10"><span>立即发布</span></a><a href="#" class="btn_off_s mr10"><span>暂不发布 (保存草稿)</span></a><a href="event.html" class="btn_gray_b"><span>取消</span></a></div>
       </div>
     </div>
