--- a/app/views/admin/wines_registers/_form.html.erb
+++ b/app/views/admin/wines_registers/_form.html.erb
@@ -1,4 +1,4 @@
-<h2>添加酒款</h2>
+<h2>添加酒</h2>
 <div class='admin_wine_register'>
   <%= stylesheet_link_tag "admin" %>
   <%= javascript_include_tag 'wine_registers_variety', 'region_world' %>
