--- a/app/views/comments/share/_comment_sns.html.erb
+++ b/app/views/comments/share/_comment_sns.html.erb
@@ -1,5 +1,5 @@
 
-同时发布到：
+同时分享到：
 <span class="sns_switch share_weibo">
 	<% if current_user && current_user.check_oauth?('weibo') %>
 		<input type="hidden" name="sns_type[]" value="weibo"/>
