--- a/app/views/event_wines/new.html.erb
+++ b/app/views/event_wines/new.html.erb
@@ -19,7 +19,7 @@
   <% end -%>
   <h1 class="main_title">添加活动用酒</h1>
   <div class="search mb20" id="search_input_view">
-    <input name="" type="text" class="text common_search mr5" placeholder="请输入酒款名称" />
+    <input name="" type="text" class="text common_search mr5" placeholder="请输入酒名称" />
     <%= link_to "javascript:void(0)", :class => [:search_wine_button,:btn_gray_b]  do %>
       <span>搜索</span>
     <% end %>
@@ -33,7 +33,7 @@
     <div class="float_r goto_add_wine" style="display: none">
       <span class="notice_b">这些都不是您要找的酒？</span>
       <a href="add_wine_new_detail_1.html" class="btn_gray">
-        <span>添加酒款</span>
+        <span>添加酒</span>
       </a>
     </div>
     <!--end mb30-->
