--- a/app/views/layouts/_global_nav.html.erb
+++ b/app/views/layouts/_global_nav.html.erb
@@ -19,7 +19,7 @@
               </li>
             <% end %> 
             <li>
-              <p class="title">热门酒款</p>
+              <p class="title">热门酒</p>
               <% get_hot_wine(1).each do |wine| %>
                 <div class="item hot">
                   <dl class="clearfix">
