--- a/app/views/wine_details/register_success.html.erb
+++ b/app/views/wine_details/register_success.html.erb
@@ -9,7 +9,7 @@
     <p>
       信息提交成功！<br/><br/>
       我们将会对您添加和上传的内容进行正确性审核，这可能需要一定的时间，请耐心等候。<br />
-      一旦审核通过，该酒款就会收录到iWine数据库，以供所有用户浏览。
+      一旦审核通过，该酒就会收录到iWine数据库，以供所有用户浏览。
     </p>
     <p>感谢您的参与！</p>
   </div>
