--- a/app/views/wineries/_winery_detail.html.erb
+++ b/app/views/wineries/_winery_detail.html.erb
@@ -101,7 +101,7 @@
                <%= image_tag("/assets/icon/winery_wine.gif", :width => 24, :height => 37) %>
            <% end  %>
          </p>
-         <p><%= link_to "所有酒款", wines_list_winery_path(@winery) %></p>
+         <p><%= link_to "所有酒", wines_list_winery_path(@winery) %></p>
        </li>
        <li>
          <p class="pic">
