--- a/app/views/wineries/wines_list.html.erb
+++ b/app/views/wineries/wines_list.html.erb
@@ -14,7 +14,7 @@
           <%= link_to winery_path(@winery), :class => "btn_gray float_r" do  %>
             <span>返回</span>
           <% end %>
-          <h2>所有酒款<span class="font12 more">(共<%= @winery.wines_count %>款)</span></h2>
+          <h2>所有酒<span class="font12 more">(共<%= @winery.wines_count %>款)</span></h2>
         </div>
         
         <div class="content">
