--- a/app/views/layouts/_user_fragment.html.erb
+++ b/app/views/layouts/_user_fragment.html.erb
@@ -29,7 +29,7 @@
       <h3>请选择要添加的内容类型</h3>
       <ul>
         <li>
-           <%= link_to "添加新酒款", add_wines_path(:step => 1), :class => "add_new_wine" %>
+           <%= link_to "添加新酒", add_wines_path(:step => 1), :class => "add_new_wine" %>
         </li>
         <li>
           <%= link_to "添加藏酒", add_cellar_items_path(current_user.cellar, :step => 1), :class => "add_cellar_wine" %>
