--- a/app/views/searches/suggestion.html.erb
+++ b/app/views/searches/suggestion.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, @title%>
-<p class="title"><a href="#">搜索酒款 》</a></p>
+<p class="title"><a href="#">搜索酒 》</a></p>
 <div id="search_scroll_wines" class="wineResult">
   <% @words['wines'].each do |wine|%>
   <dl onmouseover="$(this).addClass( 'current' );" onmouseout="$(this).removeClass('current')" class="clearfix" onclick="location.href='<%= url_for( '/wines/' + wine.id.to_s )%>'">
