--- a/app/views/users/wine_follows.html.erb
+++ b/app/views/users/wine_follows.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="right">
         <div class="sidebox">
-          <div class="title"><h3>热门酒款</h3></div>
+          <div class="title"><h3>热门酒</h3></div>
           <div class="main">
             <%= render "users/share/most_wine_follows" %>
           </div>
