--- a/app/views/wine_details/add_success.html.erb
+++ b/app/views/wine_details/add_success.html.erb
@@ -2,7 +2,7 @@
     <%= stylesheet_link_tag :hp, :add %>
 <% end %>
 <div class="whitespace addwine">
-  <h1 class="main_title">添加酒款</h1>
+  <h1 class="main_title">添加酒</h1>
   <div class="step">
     <div class="step_thr"></div>
   </div>
@@ -10,7 +10,7 @@
     <p>信息提交成功！ <br />
       <br />
       我们将会对您添加和上传的内容进行正确性审核，这可能需要一定的时间，请耐心等候。<br />
-      一旦审核通过，该酒款就会收录到Patrik数据库，以供所有用户浏览。</p>
+      一旦审核通过，该酒就会收录到Patrik数据库，以供所有用户浏览。</p>
       <p>感谢您的参与！</p>
     </div>
   </div>
