--- a/app/views/wineries/_timeline.html.erb
+++ b/app/views/wineries/_timeline.html.erb
@@ -1,5 +1,5 @@
 <% @timelines.each do |l| %>
-    <% item_id = get_rand_id(l.secondary_actor.id) %>
+    <% item_id = get_rand_id(l) %>
     <div class="iw item" id="<%= item_id %>">
         <%= render :partial => "share/follow_and_comment_button", :locals => {:parent => l.secondary_actor, :item_id => item_id} %>
         <div class="iw_img">
