--- a/public/template/event.html
+++ b/public/template/event.html
@@ -87,7 +87,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         <div class="event_tag">
         <div class="title">
                 <div class="search"><input class="text mr5" style="width:200px;" placeholder="搜索活动" name="" type="text" /><a href="event_search.html" class="btn_gray"><span>搜索</span></a></div>
-                <h2>最新活动 <span class="font12 more"><a href="winery_comment_list.html"></a></span></h2>
+                <h2>活动<span class="font12 more"><a href="wine_photo_list.html">（查看全部）</a></span><span class="font12 more"><a href="winery_comment_list.html"></a></span></h2>
                 <div class="clear"></div>
         </div>
         </div>
