报名人数选择

--- a/public/template/add_event.html
+++ b/public/template/add_event.html
@@ -91,8 +91,13 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
               </tr>
               <tr>
                 <th>人数限制</th>
-                <td><input name="text" type="text" class="text price" value="" />
-                人 （留空表示不限制人数）</td>
+                <td>
+                  <select name="select" id="select">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                  </select>
+                人</td>
               </tr>
               <tr>
                 <th>活动费用</th>
