--- a/app/views/event_participants/_cancle_form.html.erb
+++ b/app/views/event_participants/_cancle_form.html.erb
@@ -15,7 +15,7 @@
       <td></td>
       <td  algin="center" valign="top">
         <%= link_to "javascript:void(0)", :class => "btn_gray save_articipant" do  %>
-          <span>取消</span>
+          <span>确定</span>
         <% end %>
       </td> 
     </tr>
