--- a/public/template/event_detail.html
+++ b/public/template/event_detail.html
@@ -110,15 +110,16 @@ document.onclick = mclose;
                   费用:  20元<br />
                 组织者：<a href="#">Sheren</a></div>
                 <span class="p_count">54人参加  |  98人感兴趣</span>
-                <div class="action">
+                <!--<div class="action">
                 	<div class="share lh">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                     <span class="full_ss mr5"><em>人数已满</em></span><a href="#" class="btn_bluesky_ss"><span>我感兴趣</span></a>
-                </div>
-                <!--<div class="action">
+                </div><-->
+                <div class="mb10">活动剩余名额：20</div>
+                <div class="action">
                 	<div class="share lh">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                     <a href="#" class="btn_bluesky_ss mr5"><span>我要参加</span></a><a href="#" class="btn_bluesky_ss"><span>我感兴趣</span></a>
                 </div>
-                <div class="action">
+                <!--<div class="action">
                 <div class="share lh">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                 <span class="icon_fol mr5">已报名</span><span class="cancl_fol mr5"> <a href="#">(取消)</a> <a class="mr5" href="#">(修改)</a><a href="#" class="btn_bluesky_ss"><span>我感兴趣</span></a></span>
                 </div>
