--- a/app/views/share/_js_include_local.html
+++ b/app/views/share/_js_include_local.html
@@ -84,10 +84,11 @@ $(function () {
           // Redirect To Album
           var w = window.location;
           var url = w.protocol + "//" + w.host + "/";
+          var back_url = '<%= @winery ? ("wineries/#{@winery.slug}") : (@event ? ("events/#{@event.id}") : ("wines/#{@wine_detail.slug}")) %>';
           if($("input[name=save_to_album]").is(":checked")){ 
             window.location.replace(url + "albums/upload_list?photo_ids=" + photos_ids_to_str + "&album_id=" + album_id);
           }else{
-            window.location.replace(url + $(this).val() + "<%= @winery ? ('wineries/' + @winery.slug) : ('wines/' + @wine_detail.slug) %>/photos");
+            window.location.replace(url + $(this).val() + back_url + "/photos");
           }
         })
         // UI
