--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -220,13 +220,7 @@
               <!--end sidebox-->
             </div>
           <% end %> 
-
-
-          <div class="sidebox">
-            <div class="title">
-              <h3>推荐的活动</h3>
-            </div>
             <%= render 'recommends' %>
-          </div>
           <div class="clear"></div>
         </div>
+        <div class="clear"></div>
