--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -140,7 +140,7 @@
                 <span>我要创建活动</span>
             <% end %>
         </div>
-        <%= render "recommend_events" %>
+        <%= render "recommends" %>
 
     <!--end right-->
     </div>
