--- a/app/views/photos/event_photo_list.html.erb
+++ b/app/views/photos/event_photo_list.html.erb
@@ -40,7 +40,7 @@
                 <span>我要创建活动</span>
             <% end %>
         </div>
-        <%= render "events/recommend_events" %>
+        <%= render "events/recommends" %>
 	</div>
 	<div class="clear"></div>
 </div>
