--- a/app/views/comments/event_comment_detail.html.erb
+++ b/app/views/comments/event_comment_detail.html.erb
@@ -10,30 +10,7 @@
 <% end %>
    <div class="whitespace eventmain">
    	  <div class="left">
-        <div class="base">
-          <div class="poster">
-            <%= image_tag @event.poster_url(:large), :size => '150x225' %>
-          </div>
-          <div class="base_content">
-            <span class="type">
-              <%= event_item_tags(@event) %>
-            </span>
-            <h1><%= @event.title %></h1>
-            <div class="info">
-              时间: <%= @event.begin_end_at %>
-              <br />
-              地点: <%= @event.full_address %>
-              <br />
-              组织者：<%= link_to  @event.user.username, user_path(@event.user, :trailing_slash => true) %>
-            </div>
-            <span class="p_count">
-              <%= @event.participants_count %>人参加  |  <%= @event.followers_count %>人感兴趣
-            </span>
-            <!--end base_content-->
-          </div>
-          <div class="clear"></div>
-          <!--end base-->
-        </div>
+        <%= render "events/event_detail" %>
 
         <div class="section last">
           <div class="wp_space_line top">
